--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
                 <div class="navbar">
                     <div class="logo-container">
-                        <img src="/Images/userAsset/OIP -sec.jfif" class="logo">
+                        <img src="./Images/userAsset/OIP -sec.jfif" class="logo">
                         <p class="text">agar Beldar</p>
                     </div>
 
@@ -40,22 +40,22 @@
                     </div>
                     <div class="hero-section-right">
                         <div class="absolute icons icon-dots">
-                            <img src="/Images/userAsset/dots.png" alt="dots">
+                            <img src="./Images/userAsset/dots.png" alt="dots">
                         </div>
                         <div class="absolute icons icon-cubs">
-                            <img src="/Images/userAsset/cube.png" alt="dots">
+                            <img src="./Images/userAsset/cube.png" alt="dots">
                         </div>
                         <div class="absolute icons icon-circle">
-                            <img src="/Images/userAsset/circle.png" alt="dots">
+                            <img src="./Images/userAsset/circle.png" alt="dots">
                         </div>
                         <div class="absolute icons icon-zig-zag">
-                            <img src="/Images/userAsset/zigzags.png" alt="dots">
+                            <img src="./Images/userAsset/zigzags.png" alt="dots">
                         </div>
                         <!-- <div class="absolute icons icon-plus">
-                            <img src="/Port.images/plus.png" alt="dots">
+                            <img src="./Images/plus.png" alt="dots">
                         </div> -->
                         <div class="sagar">
-                            <img src="/Images/userAsset/user.JPG" class="user ">
+                            <img src="./Images/userAsset/user.JPG" class="user ">
                         </div>
 
                     </div>
@@ -72,25 +72,25 @@
                         <div class="project-content-left">
                             <div class="project-icons">
                                 <img class="project-skill"
-                                    src="/Images/Stack/HTML.png" alt>
+                                    src="./Images/Stack/HTML.png" alt>
                                 <img class="project-skill"
-                                    src="/Images/Stack/CSS.png" alt="fbdf">
+                                    src="./Images/Stack/CSS.png" alt="fbdf">
                                 <img class="project-skill"
-                                    src="/Images/Stack/Javascript.svg" alt="bfd">
+                                    src="./Images/Stack/Javascript.svg" alt="bfd">
                                 <img class="project-skill"
-                                    src="/Images/Stack/Express.png" alt>
+                                    src="./Images/Stack/Express.png" alt>
                                 <img class="project-skill"
-                                    src="/Images/Stack/NextJsCircle.png" alt>
+                                    src="./Images/Stack/NextJsCircle.png" alt>
                                 <img class="project-skill"
                                     src="/Images/Stack/Tailwind.png" alt>
                                 <img class="project-skill"
-                                    src="/Images/Stack/NodeJs.svg" alt>
+                                    src="./Images/Stack/NodeJs.svg" alt>
                                 <img class="project-skill"
-                                    src="/Images/Stack/MongoDB.svg" alt>
+                                    src="./Images/Stack/MongoDB.svg" alt>
                                 <img class="project-skill"
-                                    src="/Images/Stack/Redux.svg" alt>
+                                    src="./Images/Stack/Redux.svg" alt>
                                 <img class="project-skill"
-                                    src="/Images/Stack/Vercel.svg" alt>
+                                    src="./Images/Stack/Vercel.svg" alt>
                             </div>
                             <div class="in-heading">Tint & Orange</div>
                             <div class="in-paragraph">Its is a car modification
@@ -115,19 +115,19 @@
                         <div class="project-content-right">
                             <div class="project-icons" id="skill-one">
                                 <img class="project-skill"
-                                    src="/Images/Stack/HTML.png">
+                                    src="./Images/Stack/HTML.png">
                                 <img class="project-skill"
-                                    src="/Images/Stack/CSS.png">
+                                    src="./Images/Stack/CSS.png">
                                 <img class="project-skill"
                                     src="/Images/Stack/Javascript.svg">
                                 <img class="project-skill"
-                                    src="/Images/Stack/NextJsCircle.png">
+                                    src="./Images/Stack/NextJsCircle.png">
                                 <img class="project-skill"
-                                    src="/Images/Stack/Tailwind.png">
+                                    src="./Images/Stack/Tailwind.png">
                                 <img class="project-skill"
-                                    src="/Images/Stack/Redux.svg">
+                                    src="./Images/Stack/Redux.svg">
                                 <img class="project-skill"
-                                    src="/Images/Stack/Vercel.svg">
+                                    src="./Images/Stack/Vercel.svg">
                             </div>
                             <div class="in-heading para">Breaking Copyrights</div>
                             <div class="in-paragraphs para">A platform to
@@ -151,19 +151,19 @@
                         <div class="project-content-left left-three">
                             <div class="project-icons" id="skill-one">
                                 <img class="project-skill"
-                                    src="/Images/Stack/HTML.png" alt>
+                                    src="./Images/Stack/HTML.png" alt>
                                 <img class="project-skill"
-                                    src="/Images/Stack/CSS.png" alt="fbdf">
+                                    src="./Images/Stack/CSS.png" alt="fbdf">
                                 <img class="project-skill"
-                                    src="/Images/Stack/Javascript.svg" alt="bfd">
+                                    src="./Images/Stack/Javascript.svg" alt="bfd">
                                 <img class="project-skill"
                                     src="/Images/Stack/NextJsCircle.png" alt>
                                 <img class="project-skill"
-                                    src="/Images/Stack/Tailwind.png" alt>
+                                    src="./Images/Stack/Tailwind.png" alt>
                                 <img class="project-skill"
-                                    src="/Images/Stack/Redux.svg" alt>
+                                    src="./Images/Stack/Redux.svg" alt>
                                 <img class="project-skill"
-                                    src="/Images/Stack/Vercel.svg" alt>
+                                    src="./Images/Stack/Vercel.svg" alt>
                             </div>
                             <div class="in-heading">Gaurav </div>
                             <div class="in-paragraphs">A Website for interior
@@ -188,11 +188,11 @@
                         <div class="project-content-right">
                             <div class="project-icons">
                                 <img class="project-skill"
-                                    src="/Images/Stack/NextJsCircle.png" alt>
+                                    src=."/Images/Stack/NextJsCircle.png" alt>
                                 <img class="project-skill"
-                                    src="/Images/Stack/Redux.svg" alt>
+                                    src="./Images/Stack/Redux.svg" alt>
                                 <img class="project-skill"
-                                    src="/Images/Stack/Vercel.svg" alt>
+                                    src="./Images/Stack/Vercel.svg" alt>
                             </div>
                             <div class="in-heading para">Granit</div>
                             <div class="in-paragraphs para">A architectural
@@ -253,30 +253,30 @@
                     </div>
                     <div class="my-skill-icons">
                         <div class="my-skill-logos">
-                            <img src="/Images/Stack/Bash.svg" class="skill-logos">
-                            <img src="/Images/userAsset/blob vector.png"
+                            <img src="./Images/Stack/Bash.svg" class="skill-logos">
+                            <img src="./Images/userAsset/blob vector.png"
                                 class="bob-style">
-                            <img src="/Images/Stack/Bootstrap.svg"
+                            <img src="./Images/Stack/Bootstrap.svg"
                                 class="skill-logos">
-                            <img src="/Images/Stack/ChartJs.svg"
+                            <img src="./Images/Stack/ChartJs.svg"
                                 class="skill-logos">
                             <img src="/Images/Stack/CSS.png"
                                 class="skill-logos">
-                            <img src="/Images/Docker.svg"
+                            <img src="./Images/Docker.svg"
                                 class="skill-logos">
-                            <img src="/Images/Stack/NextJsCircle.png"
+                            <img src="/.Images/Stack/NextJsCircle.png"
                                 class="skill-logos">
-                            <img src="/Images/Stack/Express.png"
+                            <img src="./Images/Stack/Express.png"
                                 class="skill-logos">
-                            <img src="/Images/Stack/Git.svg"
+                            <img src="./Images/Stack/Git.svg"
                                 class="skill-logos">
-                            <img src="/Images/Stack/Github.svg"
+                            <img src="./Images/Stack/Github.svg"
                                 class="skill-logos">
-                            <img src="/Images/Stack/HTML.png"
+                            <img src="./Images/Stack/HTML.png"
                                  class="skill-logos">
-                            <img src="/Images/Stack/Next.svg"
+                            <img src="./Images/Stack/Next.svg"
                                  class="skill-logos">
-                            <img src="/Images/Stack/Javascript.svg"
+                            <img src="./Images/Stack/Javascript.svg"
                                 class="skill-logos">
                             <img src="/Images/Stack/K8s.svg"
                                 class="skill-logos">
@@ -284,15 +284,15 @@
                                 class="skill-logos">
                             <img src="/Images/Stack/Vercel.svg"
                                 class="skill-logos">
-                            <img src="/Images/Stack/Tailwind.png"
+                            <img src="./Images/Stack/Tailwind.png"
                                 class="skill-logos">
-                            <img src="/Images/Stack/Redux.svg"
+                            <img src="./Images/Stack/Redux.svg"
                                 class="skill-logos">
-                            <img src="/Images/Stack/React.png"
+                            <img src="./Images/Stack/React.png"
                                 class="skill-logos">
-                            <img src="/Images/Stack//NodeJs.svg"
+                            <img src="./Images/Stack//NodeJs.svg"
                                 class="skill-logos">
-                            <img src="/Images/Stack/NextJsCircle.png"
+                            <img src="./Images/Stack/NextJsCircle.png"
                                 class="skill-logos">
                         </div>
                     </div>
