--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio Website</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" href="/Images/favicon.png" type="image/x-icon">
+        <link rel="shortcut icon" href="./Images/favicon.png" type="image/x-icon">
     </head>
 
     <body>
@@ -82,7 +82,7 @@
                                 <img class="project-skill"
                                     src="./Images/Stack/NextJsCircle.png" alt>
                                 <img class="project-skill"
-                                    src="/Images/Stack/Tailwind.png" alt>
+                                    src="./Images/Stack/Tailwind.png" alt>
                                 <img class="project-skill"
                                     src="./Images/Stack/NodeJs.svg" alt>
                                 <img class="project-skill"
@@ -119,7 +119,7 @@
                                 <img class="project-skill"
                                     src="./Images/Stack/CSS.png">
                                 <img class="project-skill"
-                                    src="/Images/Stack/Javascript.svg">
+                                    src="./Images/Stack/Javascript.svg">
                                 <img class="project-skill"
                                     src="./Images/Stack/NextJsCircle.png">
                                 <img class="project-skill"
@@ -157,7 +157,7 @@
                                 <img class="project-skill"
                                     src="./Images/Stack/Javascript.svg" alt="bfd">
                                 <img class="project-skill"
-                                    src="/Images/Stack/NextJsCircle.png" alt>
+                                    src="./Images/Stack/NextJsCircle.png" alt>
                                 <img class="project-skill"
                                     src="./Images/Stack/Tailwind.png" alt>
                                 <img class="project-skill"
@@ -188,7 +188,7 @@
                         <div class="project-content-right">
                             <div class="project-icons">
                                 <img class="project-skill"
-                                    src=."/Images/Stack/NextJsCircle.png" alt>
+                                    src="./Images/Stack/NextJsCircle.png" alt>
                                 <img class="project-skill"
                                     src="./Images/Stack/Redux.svg" alt>
                                 <img class="project-skill"
@@ -260,11 +260,11 @@
                                 class="skill-logos">
                             <img src="./Images/Stack/ChartJs.svg"
                                 class="skill-logos">
-                            <img src="/Images/Stack/CSS.png"
+                            <img src="./Images/Stack/CSS.png"
                                 class="skill-logos">
                             <img src="./Images/Docker.svg"
                                 class="skill-logos">
-                            <img src="/.Images/Stack/NextJsCircle.png"
+                            <img src="./Images/Stack/NextJsCircle.png"
                                 class="skill-logos">
                             <img src="./Images/Stack/Express.png"
                                 class="skill-logos">
@@ -278,11 +278,11 @@
                                  class="skill-logos">
                             <img src="./Images/Stack/Javascript.svg"
                                 class="skill-logos">
-                            <img src="/Images/Stack/K8s.svg"
+                            <img src="./Images/Stack/K8s.svg"
                                 class="skill-logos">
-                            <img src="/Images/Stack/MaterialUI.svg"
+                            <img src="./Images/Stack/MaterialUI.svg"
                                 class="skill-logos">
-                            <img src="/Images/Stack/Vercel.svg"
+                            <img src="./Images/Stack/Vercel.svg"
                                 class="skill-logos">
                             <img src="./Images/Stack/Tailwind.png"
                                 class="skill-logos">
